@@ -373,7 +373,7 @@ callbacks, validation errors, and observers.  For example,
       end
       
       state :first_gear, :second_gear do
-        validates_present :seatbelt_on
+        validates_presence_of :seatbelt_on
       end
     end
     
